--- a/index.html
+++ b/index.html
@@ -66,22 +66,183 @@
     <!-- Navbar End -->
 
     <main>
-
       <!-- Banner START -->
       <section class="mx-auto relative flex items-center justify-center">
-        <img src="./assets/images/banner.png" class="w-full h-[80vh]" alt="">
+        <img src="./assets/images/banner.png" class="w-full h-[80vh]" alt="" />
         <!-- overlay -->
-        <div class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-black/80 to-transparent"></div>
-        
+        <div
+          class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-black/80 to-transparent"
+        ></div>
+
         <div class="absolute top-0 w-10/12 h-full text-white px-4">
-          <div class="h-full flex flex-col w-full md:w-3/6 justify-center items-start py-20">
+          <div
+            class="h-full flex flex-col w-full md:w-3/6 justify-center items-start py-20"
+          >
             <h1 class="text-4xl font-bold mb-4">Best Collection For You</h1>
-            <p class="text-lg mb-6">Discover a world of creativity and craftsmanship with SwiftCraft. From handmade jewelry to custom furniture, we bring your ideas to life.</p>
+            <p class="text-lg mb-6">
+              Discover a world of creativity and craftsmanship with SwiftCraft.
+              From handmade jewelry to custom furniture, we bring your ideas to
+              life.
+            </p>
             <button class="btn btn-primary">Shop Now</button>
           </div>
         </div>
+      </section>
       <!-- Banner END -->
+
+      <!--Features STARt -->
+      <section>
+        <div class="w-10/12 mx-auto py-16">
+          <h2 class="text-center font-bold text-3xl mb-2">Why Choose Us</h2>
+          <p class="text-center">
+            We are committed to providing exceptional customer service, ensuring
+            your satisfaction with every purchase.
+          </p>
+
+          <div class="grid md:grid-cols-4 mt-20 gap-6">
+            <!-- feature 1 -->
+            <div class="card bg-base-100 shadow-xl">
+              <div class="card-body relative">
+                <div class="bg-white absolute -top-2 p-1 rounded shadow">
+                  <div class="bg-blue-200 p-2 text-blue-800 rounded">
+                    <i class="fa-solid fa-truck-fast text-xl"></i>
+                  </div>
+                </div>
+                <h2 class="card-title mt-8">Quality Materials</h2>
+                <p>
+                  Our products are made with high-quality materials, ensuring
+                  durability and longevity.
+                </p>
+              </div>
+            </div>
+
+            <!-- feature 2 -->
+            <div class="card bg-base-100 shadow-xl">
+              <div class="card-body relative">
+                <div class="bg-white absolute -top-2 p-1 rounded shadow">
+                  <div class="bg-blue-200 p-2 text-blue-800 rounded">
+                    <i class="fa-solid fa-headphones text-xl"></i>
+                  </div>
+                </div>
+                <h2 class="card-title mt-8">Quality Materials</h2>
+                <p>
+                  Our products are made with high-quality materials, ensuring
+                  durability and longevity.
+                </p>
+              </div>
+            </div>
+
+            <!-- feature 3 -->
+            <div class="card bg-base-100 shadow-xl">
+              <div class="card-body relative">
+                <div class="bg-white absolute -top-2 p-1 rounded shadow">
+                  <div class="bg-blue-200 p-2 text-blue-800 rounded">
+                    <i class="fa-solid fa-shield-halved text-xl"></i>
+                  </div>
+                </div>
+                <h2 class="card-title mt-8">Quality Materials</h2>
+                <p>
+                  Our products are made with high-quality materials, ensuring
+                  durability and longevity.
+                </p>
+              </div>
+            </div>
+
+            <!-- feature 4 -->
+            <div class="card bg-base-100 shadow-xl">
+              <div class="card-body relative">
+                <div class="bg-white absolute -top-2 p-1 rounded shadow">
+                  <div class="bg-blue-200 p-2 text-blue-800 rounded">
+                    <i class="fa-solid fa-arrows-rotate text-xl"></i>
+                  </div>
+                </div>
+                <h2 class="card-title mt-8">Quality Materials</h2>
+                <p>
+                  Our products are made with high-quality materials, ensuring
+                  durability and longevity.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Features END -->
     </main>
+
+    <footer class="bg-slate-800 text-white py-10 mt-20">
+      <div class="w-10/12 mx-auto">
+        <div class="grid md:grid-cols-4">
+          <!-- Logo and short description -->
+          <div class="">
+            <h2 class="text-2xl font-bold mb-4 text-blue-300">SwiftCraft</h2>
+            <p>
+              SwiftCraft is your go-to destination for unique, handcrafted
+              products that blend creativity and quality. Explore our collection
+              and find something special today!
+            </p>
+          </div>
+
+          <!-- Quick links -->
+          <div class="w-10/12 mx-auto">
+            <h2 class="text-xl font-bold mb-4">Quick Links</h2>
+            <ul>
+              <li><a href="#" class="hover:underline">Home</a></li>
+              <li><a href="#" class="hover:underline">Products</a></li>
+              <li><a href="#" class="hover:underline">About</a></li>
+              <li><a href="#" class="hover:underline">Contact</a></li>
+            </ul>
+          </div>
+
+          <!-- Support Links -->
+          <div class="w-10/12 mx-auto">
+            <h2 class="text-xl font-bold mb-4">Support</h2>
+            <ul>
+              <li><a href="#" class="hover:underline">FAQ</a></li>
+              <li><a href="#" class="hover:underline">Shipping</a></li>
+              <li><a href="#" class="hover:underline">Returns</a></li>
+              <li><a href="#" class="hover:underline">Contact</a></li>
+            </ul>
+          </div>
+
+          <!-- Newsletter -->
+          <div class="w-10/12 mx-auto">
+            <h2 class="text-xl font-bold mb-4">Newsletter</h2>
+            <p class="mb-2">
+              Subscribe to our newsletter to get the latest updates and offers.
+            </p>
+            <form class="flex gap-2">
+              <input
+                type="email"
+                placeholder="Enter your email"
+                class="input input-bordered w-full max-w-xs mb-2"
+              />
+              <button class="btn btn-primary">Subscribe</button>
+            </form>
+          </div>
+        </div>
+        <hr class="my-5 bg-slate-200" />
+        <div
+          class="text-center flex flex-col items-center justify-center md:flex-row md:justify-between"
+        >
+          <p>&copy; 2025 SwiftCraft, Inc. All rights reserved.</p>
+          <!-- social icons -->
+          <div class="flex items-center justify-center mt-4 gap-4">
+            <a href="#" class="text-gray-400 hover:text-white transition">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-white transition">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-white transition">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-white transition">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="./script/script.js"></script>
   </body>
