--- a/index.html
+++ b/index.html
@@ -167,6 +167,91 @@
         </div>
       </section>
       <!--Features END -->
+
+      <!-- 3 Trending Products Start -->
+      <section>
+        <div class="w-10/12 mx-auto py-10">
+          <h2 class="font-bold text-3xl mb-5">Trending Now</h2>
+
+          <div class="grid md:grid-cols-3 gap-6">
+            <!-- product 1 -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure class="h-60">
+                <img
+                  src="https://images.pexels.com/photos/1214212/pexels-photo-1214212.jpeg"
+                  alt="Product 1"
+                />
+              </figure>
+
+              <div class="card-body">
+                <div class="flex justify-between">
+                  <span class="text-sm bg-blue-100 rounded-full px-2 py-1">Mens clothing</span>
+                  <!-- rating -->
+                   <span>
+                    <i class="fa-solid fa-star text-yellow-400"></i>
+                    3.9 (120)
+                   </span>
+                </div>
+                <h2 class="card-title">Handcrafted Wooden Bowl</h2>
+                <p>Price: $50</p>
+                <div class="flex gap-2">
+                  <button class="btn btn-outline flex-1">
+                    <i class="fa-solid fa-eye"></i> Details
+                  </button>
+                  <button class="btn btn-primary flex-1">
+                    <i class="fa-solid fa-cart-shopping"></i> Add
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- product 2 -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure class="h-60">
+                <img
+                  src="https://images.pexels.com/photos/1214212/pexels-photo-1214212.jpeg"
+                  alt="Product 1"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Handcrafted Wooden Bowl</h2>
+                <p>Price: $50</p>
+                <div class="flex gap-2">
+                  <button class="btn btn-outline flex-1">
+                    <i class="fa-solid fa-eye"></i> Details
+                  </button>
+                  <button class="btn btn-primary flex-1">
+                    <i class="fa-solid fa-cart-shopping"></i> Add
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- product 3 -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure class="h-60">
+                <img
+                  src="https://images.pexels.com/photos/1214212/pexels-photo-1214212.jpeg"
+                  alt="Product 1"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Handcrafted Wooden Bowl</h2>
+                <p>Price: $50</p>
+                <div class="flex gap-2">
+                  <button class="btn btn-outline flex-1">
+                    <i class="fa-solid fa-eye"></i> Details
+                  </button>
+                  <button class="btn btn-primary flex-1">
+                    <i class="fa-solid fa-cart-shopping"></i> Add
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Trending Products End -->
     </main>
 
     <footer class="bg-slate-800 text-white py-10 mt-20">
@@ -186,10 +271,18 @@
           <div class="w-10/12 mx-auto">
             <h2 class="text-xl font-bold mb-4">Quick Links</h2>
             <ul>
-              <li><a href="#" class="hover:underline">Home</a></li>
-              <li><a href="#" class="hover:underline">Products</a></li>
-              <li><a href="#" class="hover:underline">About</a></li>
-              <li><a href="#" class="hover:underline">Contact</a></li>
+              <li>
+                <a href="#" class="transition-all hover:underline">Home</a>
+              </li>
+              <li>
+                <a href="#" class="transition-all hover:underline">Products</a>
+              </li>
+              <li>
+                <a href="#" class="transition-all hover:underline">About</a>
+              </li>
+              <li>
+                <a href="#" class="transition-all hover:underline">Contact</a>
+              </li>
             </ul>
           </div>
 
@@ -197,10 +290,18 @@
           <div class="w-10/12 mx-auto">
             <h2 class="text-xl font-bold mb-4">Support</h2>
             <ul>
-              <li><a href="#" class="hover:underline">FAQ</a></li>
-              <li><a href="#" class="hover:underline">Shipping</a></li>
-              <li><a href="#" class="hover:underline">Returns</a></li>
-              <li><a href="#" class="hover:underline">Contact</a></li>
+              <li>
+                <a href="#" class="transition-all hover:underline">FAQ</a>
+              </li>
+              <li>
+                <a href="#" class="transition-all hover:underline">Shipping</a>
+              </li>
+              <li>
+                <a href="#" class="transition-all hover:underline">Returns</a>
+              </li>
+              <li>
+                <a href="#" class="transition-all hover:underline">Contact</a>
+              </li>
             </ul>
           </div>
 
@@ -214,13 +315,13 @@
               <input
                 type="email"
                 placeholder="Enter your email"
-                class="input input-bordered w-full max-w-xs mb-2"
+                class="input input-bordered w-full max-w-xs mb-2 placeholder:text-gray-500"
               />
               <button class="btn btn-primary">Subscribe</button>
             </form>
           </div>
         </div>
-        <hr class="my-5 bg-slate-200" />
+        <hr class="my-5 border-blue-300" />
         <div
           class="text-center flex flex-col items-center justify-center md:flex-row md:justify-between"
         >
