--- a/products.html
+++ b/products.html
@@ -18,8 +18,8 @@
   </head>
   <body>
     <!-- Navbar Start -->
-    <nav class="w-10/12 mx-auto">
-      <div class="navbar bg-base-100 shadow-sm">
+    <nav class="shadow-sm">
+      <div class="navbar bg-base-100 w-10/12 mx-auto">
         <div class="navbar-start">
           <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -42,18 +42,18 @@
               tabindex="-1"
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
             >
-              <li><a>Home</a></li>
-              <li><a>Products</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="products.html">Products</a></li>
               <li><a>About</a></li>
               <li><a>Contact</a></li>
             </ul>
           </div>
-          <a class="cursor-pointer text-xl">SwiftCraft</a>
+          <a href="index.html" class="cursor-pointer text-xl">SwiftCraft</a>
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>
-            <li><a>Products</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a>About</a></li>
             <li><a>Contact</a></li>
           </ul>
@@ -119,7 +119,7 @@
       <!-- all Products End -->
 
       <!-- Open the modal using ID.showModal() method -->
-      <button class="btn" onclick="my_modal_1.showModal()" >open modal</button>
+      <!-- <button class="btn" onclick="my_modal_1.showModal()" >open modal</button> -->
       <dialog id="my_modal_1" class="modal">
         <div class="modal-box">
           <!-- products details -->
@@ -138,10 +138,12 @@
 
     <footer class="bg-slate-800 text-white py-10 mt-20">
       <div class="w-10/12 mx-auto">
-        <div class="grid md:grid-cols-4">
+        <div class="grid md:grid-cols-4 gap-4">
           <!-- Logo and short description -->
           <div class="">
-            <h2 class="text-2xl font-bold mb-4 text-blue-300">SwiftCraft</h2>
+            <a href="index.html" class="text-2xl font-bold mb-4 inline-block text-blue-400">
+              SwiftCraft
+            </a>
             <p>
               SwiftCraft is your go-to destination for unique, handcrafted
               products that blend creativity and quality. Explore our collection
@@ -150,7 +152,7 @@
           </div>
 
           <!-- Quick links -->
-          <div class="w-10/12 mx-auto">
+          <div class="">
             <h2 class="text-xl font-bold mb-4">Quick Links</h2>
             <ul>
               <li>
@@ -169,7 +171,7 @@
           </div>
 
           <!-- Support Links -->
-          <div class="w-10/12 mx-auto">
+          <div class="">
             <h2 class="text-xl font-bold mb-4">Support</h2>
             <ul>
               <li>
@@ -188,7 +190,7 @@
           </div>
 
           <!-- Newsletter -->
-          <div class="w-10/12 mx-auto">
+          <div class="">
             <h2 class="text-xl font-bold mb-4">Newsletter</h2>
             <p class="mb-2">
               Subscribe to our newsletter to get the latest updates and offers.
@@ -202,6 +204,7 @@
               <button class="btn btn-primary">Subscribe</button>
             </form>
           </div>
+          
         </div>
         <hr class="my-5 border-blue-300" />
         <div
